--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,10 @@ fieldset {
     padding: 0;
 }
 table{width: 100%;
-margin: 0;
-padding: 0;}
+  margin: 0;
+  padding: 0;
+  border-collapse: collapse;
+  border-spacing: 0;}
 
 
 h1 {
@@ -148,7 +150,6 @@ margin: 8px 6px 4px 2px;
 
 }
 
-
 .bottonTdCancel {
        background-color: grey;
     border-radius: 3px;
@@ -156,18 +157,11 @@ margin: 8px 6px 4px 2px;
     width: 65px;
     height: 25px;
     border: none;
-    margin: 8px 2px 4px 6px;
-    
-    
-    
+    margin: 8px 2px 4px 6px;   
 }
-
 
 .text{padding: 4px;
 margin-left: 5px;}
 .textcoment {margin: 0 0 25px 8px;
     padding: 0;
 
-textarea{ margin: 0;}
-.tr{border: 1px solid black;}
-.td{border: 1px solid black;}
